--- a/AnimalAdoption.Web.Portal/Pages/MissingEnvironmentVariable.cshtml
+++ b/AnimalAdoption.Web.Portal/Pages/MissingEnvironmentVariable.cshtml
@@ -5,10 +5,10 @@
 }
 
 <h1 class="text-danger">Error.</h1>
-<h3 class="text-danger">The "GlobalPassword" environment variable is missing</h3>
+<h3 class="text-danger">The "ConnectionString" variable is missing</h3>
 
 <p>
-    In development the <strong>appsettings.Development.json</strong> configuration contains this value for testing purposes. In production it will need to be provided during runtime.
+    This needs to be provided during runtime.
 </p>
 <p>
     <strong>For information on how to provide settings on an Azure Web App, refer to the following page.</strong>
